Closed Bug 253108 Opened 21 years ago Closed 21 years ago

Translucent xul windows on gtk2 breaks gtk embedding.

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

x86
Linux
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8alpha3

People

(Reporter: mozillabugs.philipl, Assigned: Biesinger)

Details

(Keywords: embed, regression)

Attachments

(2 files, 1 obsolete file)

The fix for bug 252525 breaks gtk2 embedding because it makes invalid assumption about nsWindows. Run TestGtkEmbed and watch the fireworks. Crispin got a backtrace.
Flags: blocking1.8a3?
Keywords: embed
Attached file Backtrace of crash
Attachment #154364 - Flags: superreview?(roc)
Attachment #154364 - Flags: review?(blizzard)
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8alpha3
Comment on attachment 154364 [details] [diff] [review] add some nullchecks Set aTranslucent to PR_FALSE at the top of GetWindowTranslucency
Attachment #154364 - Flags: superreview?(roc) → superreview+
Attached patch committed patchSplinter Review
This is the patch that I just committed. Has some formatting changes and roc's suggestion (which I fully agree with.)
Attachment #154364 - Attachment is obsolete: true
Attachment #154364 - Flags: review?(blizzard) → review+
Checked in. Thanks!
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.8a3?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: