Bug #253108.  Translucent xul windows on gtk2 breaks gtk embedding.  Patch from Philip Langdale <philipl@mail.utexas.edu>.  Add some null checks.  r=blizzard,sr=roc